[gd_scene load_steps=13 format=2]

[ext_resource path="res://Head Icons/QA.png" type="Texture" id=1]
[ext_resource path="res://Head Icons/Scrum Master.png" type="Texture" id=2]
[ext_resource path="res://Square12.tres" type="DynamicFont" id=3]
[ext_resource path="res://Head Icons/Dev 2.png" type="Texture" id=4]
[ext_resource path="res://Head Icons/Dev 1.png" type="Texture" id=5]
[ext_resource path="res://Head Icons/UX Designer.png" type="Texture" id=6]
[ext_resource path="res://TeamIntro.gd" type="Script" id=7]

[sub_resource type="Animation" id=5]
resource_name = "Dev1Bobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 640, 208 ), Vector2( 640, 210 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Dev2Bobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 410, 208 ), Vector2( 410, 210 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "QABobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 870, 200 ), Vector2( 870, 202 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "SMBobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 180, 200 ), Vector2( 180, 202 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "UXBobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1100, 208 ), Vector2( 1100, 210 ) ]
}

[node name="TeamIntro" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.662745, 0.776471, 0.819608, 1 )

[node name="DEV1" type="Label" parent="."]
margin_left = 611.0
margin_top = 300.0
margin_right = 680.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 3 )
text = "Dev"
align = 1

[node name="Dev1" type="Sprite" parent="."]
position = Vector2( 640, 208 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dev1"]
autoplay = "Dev1Bobbing"
anims/Dev1Bobbing = SubResource( 5 )

[node name="DEV2" type="Label" parent="."]
margin_left = 378.0
margin_top = 300.0
margin_right = 447.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 3 )
text = "Dev"
align = 1

[node name="Dev2" type="Sprite" parent="."]
position = Vector2( 410, 208 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dev2"]
autoplay = "Dev2Bobbing"
anims/Dev2Bobbing = SubResource( 6 )

[node name="QA2" type="Label" parent="."]
margin_left = 783.0
margin_top = 300.0
margin_right = 953.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 3 )
text = "Quality
Engineer"
align = 1

[node name="QA" type="Sprite" parent="."]
position = Vector2( 870, 200 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QA"]
autoplay = "QABobbing"
anims/QABobbing = SubResource( 7 )

[node name="SM" type="Label" parent="."]
margin_left = 118.0
margin_top = 300.0
margin_right = 255.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 3 )
text = "Scrum
Master"
align = 1

[node name="ScrumMaster" type="Sprite" parent="."]
position = Vector2( 180, 200 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScrumMaster"]
autoplay = "SMBobbing"
anims/SMBobbing = SubResource( 8 )

[node name="UX" type="Label" parent="."]
margin_left = 1005.0
margin_top = 300.0
margin_right = 1175.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 3 )
text = "UX
Designer"
align = 1

[node name="UXDesigner" type="Sprite" parent="."]
position = Vector2( 1100, 210 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UXDesigner"]
autoplay = "UXBobbing"
anims/UXBobbing = SubResource( 9 )
